--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p>Hey Jaswanth, just wanted to let you know that you're always on my mind. Nee smile baguntadhi anta kadha, adhi nijam...never let that beautiful smile fade. I believe you're going to be a successful person and make your loved ones proud. I really want you to be the happiest person. Nuvvu happy ga undali ani nenu chala korukunta. Hope this little webpage brings a smile to your face! Konchem cringe ga undhi ani nuvvu anukovachu but please bear with me and konchem long ye untadhi, opika techukoni chudu 😅. April 13th nunchi anukunta kastapaduthunte ninna complete ayindhi finally. (E photo sequence endhuku petindhi ra babu anukoku 😅, it's a pretty cute photo sequence of yours, natural smile untadhi dhintlo and tbh siggu padthunattu untav nuvvu dhintlo 🤭)</p>
                 <div class="image-container">
                 <img src="pics/Picture1.jpg" height="100" width="300">
-                <a href="http://127.0.0.1:5501/2%20contents.html">
+                <a href="https://deevena-05.github.io/For-Jaswanth/2-contents.html">
                     <button> Click Me </button>
                   </a>
                 </div>
