--- a/2-contents.html
+++ b/2-contents.html
@@ -13,7 +13,7 @@
     </div>
     
     <div id="section 1" class="section">
-        <a href="3 video.html">
+        <a href="https://deevena-05.github.io/For-Jaswanth/3-video.html">
             <button onclick="playPlaylist()">Video</button>
         </a>
         <p>Neeku annitillo Supra MK4 inka Kawasaki Z900 istam annav ga, vatiki related ga edhaina chedham anukunna...inka last ki idhi ayindhi 😅  </p>
@@ -21,20 +21,20 @@
     </div>
 
     <div id="section2" class="section">
-        <a href="5 playlist.html">
+        <a href="https://deevena-05.github.io/For-Jaswanth/5-playlist.html">
             <button onclick="playVideo()">Playlist</button>
         </a>
         <p>Here are a few songs from my playlist for you 💗</p>
     </div>
 
     <div id="section3" class="section">
-        <a href="7 message.html">
+        <a href="https://deevena-05.github.io/For-Jaswanth/7-message.html">
             <button onclick="playVideo()">Message</button>
         </a>
         <p>A sweet message for you 😁</p>
     </div>
     <div id="section4" class="section">
-        <a href="8 img msg.html">
+        <a href="https://deevena-05.github.io/For-Jaswanth/8-imgmsg.html">
             <button onclick="playVideo()">With Love</button>
         </a>
         <p>Something different hehe</p>
