--- a/3-video.html
+++ b/3-video.html
@@ -14,7 +14,7 @@
 
   <div class="button-container">
     <button class="click-me-button">
-  <a href="http://127.0.0.1:5501/4%20pics.html" class="image-button">
+  <a href="https://deevena-05.github.io/For-Jaswanth/4-pics.html" class="image-button">
     <img src="pics/supra-2-logo.png" alt="Button Image" width="20" height="20">
 </a>
 ⬆️Click Me⬆️
