--- a/5-playlist.html
+++ b/5-playlist.html
@@ -142,7 +142,7 @@
     <script>
         function playSong(index) {
             localStorage.setItem("songIndex", index); 
-            window.location.href = "6-music.html"; 
+            window.location.href = "https://deevena-05.github.io/For-Jaswanth/6-music.html"; 
         }
     </script>
 </body>
